--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
 
     <title>INICIO</title>
 </head>
-<body>
-    <main class="maininicio">
-        <header>
-            <nav>
-                <div class="logo">
-                    <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                    <div class="logo__title wow animate__animated animate__pulse">Akatsuki</div>
-                </div>
-                <ul class="navlinks">
-                    <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
-                </ul>
-            </nav>
-        </header>
+<body class="bodyinicio">
+    <header>
+        <nav>
+            <div class="logo">
+                <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
+                <div class="logo__title wow animate__animated animate__pulse">Akatsuki</div>
+            </div>
+            <ul class="navlinks">
+                <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
+                <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
         <section class="bannerInicio"></section>
         <div class="titleinicio">
             <p class="titleinicio__text wow animate__animated animate__pulse">Bienvenidos</p>
@@ -70,25 +70,25 @@
                 <p class="containerestatua__p wow animate__animated animate__fadeIn animate__slower 	3s">La estatua demoníaca del camino exterior es el caparazón vacío del diez colas, y una invocación personal del rinnegan usada por Madara, Nagato y Obito Uchiha. Nuestra organizacion se encargaba de capturar a cada Jinchūriki (humano que sirve como contenedor espiritual de un bijū) y extraerles el biju.  </p>
             </div>
         </div>
-        <footer>
-            <div class="footercontent">
-                <ul class="footercontent__socials">
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
-            </div>
-        </footer>
-        <div class="footerbutton">
-            <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
-        </div>
-        <!--SCRIPTS-->
-        <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="js/wow.min.js"></script>
-        <script script>new WOW().init();</script>
-        <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
     </main>
+    <footer>
+        <div class="footercontent">
+            <ul class="footercontent__socials">
+                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-instagram"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-twitter"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-facebook"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+        </div>
+    </footer>
+    <div class="footerbutton">
+        <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
+    </div>
+    <!--SCRIPTS-->
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="js/wow.min.js"></script>
+    <script script>new WOW().init();</script>
+    <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
 </body>
 </html>
