--- a/galeria.html
+++ b/galeria.html
@@ -22,50 +22,52 @@
 
     <title>GALERIA</title>
 </head>
-<body>
-    <main class="maingaleria">
-        <header>
-            <nav>
-                <div class="logo">
-                    <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                    <div class="logo__title">Akatsuki</div>
-                </div>
-                <ul class="navlinks">
-                    <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li></ul>
+<body class="bodygaleria">
+    <header>
+        <nav>
+            <div class="logo">
+                <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
+                <div class="logo__title">Akatsuki</div>
+            </div>
+            <ul class="navlinks">
+                <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
+                <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
+            </ul>
             </nav>
             <section class="bannerGaleria"></section>
         </header>
-        <div class="titlegaleria">
-            <p class="titlegaleria__text wow animate__animated animate__pulse">Galeria de fotos</p>
-        </div>
-        <div class="backgroundGaleria">
-                <ul class="containergaleria">
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu2.png" alt="zetsu2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kisame1.png" alt="kisame1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu3.png" alt="zetsu3"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori2.png" alt="sasori2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi2.png" alt="itachi2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru1.png" alt="horochimaru1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi1.png" alt="tobi1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi2.png" alt="tobi2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu2.png" alt="kakuzu2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru2.png" alt="horochimaru2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan2.png" alt="konan2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain1.png" alt="pain1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara2.png" alt="deidara2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain2.png" alt="pain2"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori1.png" alt="sasori1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan1.png" alt="konan1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu1.png" alt="zetsu1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara1.png" alt="deidara1"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain3.png" alt="pain3"></li>
-                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi1.png" alt="itachi1"></li>
-                </ul>
-        </div>
+        <main>
+            <div class="titlegaleria">
+                <p class="titlegaleria__text wow animate__animated animate__pulse">Galeria de fotos</p>
+            </div>
+            <div class="backgroundGaleria">
+                    <ul class="containergaleria">
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu2.png" alt="zetsu2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kisame1.png" alt="kisame1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu3.png" alt="zetsu3"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori2.png" alt="sasori2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi2.png" alt="itachi2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru1.png" alt="horochimaru1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi1.png" alt="tobi1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi2.png" alt="tobi2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu2.png" alt="kakuzu2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru2.png" alt="horochimaru2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan2.png" alt="konan2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain1.png" alt="pain1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara2.png" alt="deidara2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain2.png" alt="pain2"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori1.png" alt="sasori1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan1.png" alt="konan1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu1.png" alt="zetsu1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara1.png" alt="deidara1"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain3.png" alt="pain3"></li>
+                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi1.png" alt="itachi1"></li>
+                    </ul>
+            </div>
+        </main>
         <footer>
             <div class="footercontent">
                 <ul class="footercontent__socials">
@@ -85,6 +87,5 @@
         <script script>new WOW().init();</script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    </main>
 </body>
 </html>
