--- a/historia.html
+++ b/historia.html
@@ -22,67 +22,69 @@
 
     <title>HISTORIA</title>
 </head>
-<body>
-    <main class="mainhistoria">
-        <header>
-            <nav>
-                <div class="logo">
-                    <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                    <div class="logo__title">Akatsuki</div>
-                </div>
-                <ul class="navlinks">
-                    <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li></ul>
+<body class="bodyhistoria">
+    <header>
+        <nav>
+            <div class="logo">
+                <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
+                <div class="logo__title">Akatsuki</div>
+            </div>
+            <ul class="navlinks">
+                <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
+                <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
+            </ul>
             </nav>
             <section class="bannerHistoria"></section>
         </header>
-        <div class="titlehistoria">
-            <p class="titlehistoria__text wow animate__animated animate__pulse">Historia</p>
-        </div>
-        <div id="historia" class="container-fluid">
-            <div class="historia__block">
-                <div class="historia__block-historia col-12 col-lg-4">
-                    <h3 class="historia__block--title">Historia de la Organizacion</h4>
-                    <p class="historia__block--text">Fue fundada por Yahiko, y con el tiempo esta organización fue temida en todo el mundo debido al tremendo poder de sus miembros,<br> el alcance de su influencia en el mundo ninja y su naturaleza despiadada. La mayoría de sus integrantes se encontraban anexados<br> en las páginas del Libro Bingo de su respectiva aldea por lo cual se tenía la orden de matarlos apenas se les vieran.</p>
-                </div>
-                <div class="historia__block--objetivos col-12 col-lg-4">
-                    <h3 class="historia__block--title">Objetivos</h4>
-                    <p class="historia__block--text">El objetivo principal de la organizacion fue el de capturar a los Jinchūriki para extraerles sus Bestias con Cola,<br> sellarlas en la Estatua Demoníaca del Camino Exterior y de esa manera despertar al Diez Colas, la criatura más poderosa del planeta.</p>
-                </div>
-                <div class="historia__block--inicios col-12 col-lg-4">
-                    <h3 class="historia__block--title">Inicios</h4>
-                    <p class="historia__block--text">Durante sus comienzos, Akatsuki fue formada por Yahiko, junto a sus compañeros Nagato y Konan, quienes buscaban encontrar la paz sin llegar a utilizar la violencia y llegando a acuerdos pacíficos con los invasores. La aldea donde operaba Akatsuki era frecuentemente atacada por varios shinobis debido a que se encontraba localizada entre tres de las Cinco Grandes Naciones Shinobi, Konohagakure, Iwagakure y Sunagakure. Así mismo, Akatsuki fue formada con la intención de apoyar el pensamiento que poseía Hanzō, líder absoluto de Amegakure, acerca de un mundo lleno de armonía.</p>
-                </div>
+        <main>
+            <div class="titlehistoria">
+                <p class="titlehistoria__text wow animate__animated animate__pulse">Historia</p>
             </div>
-        </div>
-        <div id="carrousel">
-            <div class="col-6 m-auto">
-                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="media/historia/inicios1.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="media/historia/inicios2.png" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="media/historia/inicios3.png" class="d-block w-100" alt="...">
-                        </div>
+            <div id="historia" class="container-fluid">
+                <div class="historia__block">
+                    <div class="historia__block-historia col-12 col-lg-4">
+                        <h3 class="historia__block--title">Historia de la Organizacion</h4>
+                        <p class="historia__block--text">Fue fundada por Yahiko, y con el tiempo esta organización fue temida en todo el mundo debido al tremendo poder de sus miembros,<br> el alcance de su influencia en el mundo ninja y su naturaleza despiadada. La mayoría de sus integrantes se encontraban anexados<br> en las páginas del Libro Bingo de su respectiva aldea por lo cual se tenía la orden de matarlos apenas se les vieran.</p>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    <div class="historia__block--objetivos col-12 col-lg-4">
+                        <h3 class="historia__block--title">Objetivos</h4>
+                        <p class="historia__block--text">El objetivo principal de la organizacion fue el de capturar a los Jinchūriki para extraerles sus Bestias con Cola,<br> sellarlas en la Estatua Demoníaca del Camino Exterior y de esa manera despertar al Diez Colas, la criatura más poderosa del planeta.</p>
+                    </div>
+                    <div class="historia__block--inicios col-12 col-lg-4">
+                        <h3 class="historia__block--title">Inicios</h4>
+                        <p class="historia__block--text">Durante sus comienzos, Akatsuki fue formada por Yahiko, junto a sus compañeros Nagato y Konan, quienes buscaban encontrar la paz sin llegar a utilizar la violencia y llegando a acuerdos pacíficos con los invasores. La aldea donde operaba Akatsuki era frecuentemente atacada por varios shinobis debido a que se encontraba localizada entre tres de las Cinco Grandes Naciones Shinobi, Konohagakure, Iwagakure y Sunagakure. Así mismo, Akatsuki fue formada con la intención de apoyar el pensamiento que poseía Hanzō, líder absoluto de Amegakure, acerca de un mundo lleno de armonía.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div id="carrousel">
+                <div class="col-6 m-auto">
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="media/historia/inicios1.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="media/historia/inicios2.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="media/historia/inicios3.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </main>
         <footer>
             <div class="footercontent">
                 <ul class="footercontent__socials">
@@ -102,6 +104,5 @@
         <script script>new WOW().init();</script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    </main>
 </body>
 </html>
