--- a/miembros.html
+++ b/miembros.html
@@ -22,90 +22,92 @@
 
     <title>MIEMBROS</title>
 </head>
-<body>
-    <main class="mainmiembros">
-        <header>
-            <nav>
-                <div class="logo">
-                    <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                    <div class="logo__title">Akatsuki</div>
-                </div>
-                <ul class="navlinks">
-                    <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
-                    <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li></ul>
+<body class="bodymiembros">
+    <header>
+        <nav>
+            <div class="logo">
+                <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
+                <div class="logo__title">Akatsuki</div>
+            </div>
+            <ul class="navlinks">
+                <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
+                <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
+                <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
+            </ul>
             </nav>
             <section class="bannerMiembros"></section>
         </header>
-        <div class="backgroundmiembros">
+        <main>
+            <div class="backgroundmiembros">
             <div class="titlemiembros">
                 <p class="titlemiembros__text wow animate__animated animate__pulse">Miembros</p>
             </div>
-            <div id="miembros">
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/hidan.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">hidan</div>
+                <div id="miembros">
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
+                        <img class="miembros__img" src="media/miembros/hidan.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">hidan</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/kakuzu.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">kakuzu</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
+                        <img class="miembros__img" src="media/miembros/kakuzu.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">kakuzu</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/itachi.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">itachi</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
+                        <img class="miembros__img" src="media/miembros/itachi.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">itachi</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/kizame.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">kizame</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
+                        <img class="miembros__img" src="media/miembros/kizame.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">kizame</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/zetsu.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">zetsu</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
+                        <img class="miembros__img" src="media/miembros/zetsu.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">zetsu</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/tobi.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">tobi</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
+                        <img class="miembros__img" src="media/miembros/tobi.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">tobi</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/deidara.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">deidara</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
+                        <img class="miembros__img" src="media/miembros/deidara.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">deidara</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/sasori.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">sasori</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
+                        <img class="miembros__img" src="media/miembros/sasori.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">sasori</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/konan.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">konan</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
+                        <img class="miembros__img" src="media/miembros/konan.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">konan</div>
+                        </div>
                     </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/pain.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">pain</div>
+                    <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
+                        <img class="miembros__img" src="media/miembros/pain.png" width="100%" />
+                        <div class="miembros__overlay miembros__Blur">
+                            <div class="miembros__image-title">pain</div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </main>
         <footer>
             <div class="footercontent">
                 <ul class="footercontent__socials">
@@ -125,6 +127,5 @@
         <script script>new WOW().init();</script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    </main>
 </body>
 </html>
