--- a/galeria.html
+++ b/galeria.html
@@ -33,7 +33,7 @@
                 <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
-                <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
+                <li class="navlinks__list"><a class="navlinks__text active" href="galeria.html">Galeria</a></li>
                 <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
             </ul>
             </nav>
@@ -41,7 +41,7 @@
         </header>
         <main>
             <div class="titlegaleria">
-                <p class="titlegaleria__text wow animate__animated animate__pulse">Galeria de fotos</p>
+                <h1 class="titlegaleria__text wow animate__animated animate__pulse">Galeria de fotos</h1>
             </div>
             <div class="backgroundGaleria">
                     <ul class="containergaleria">
