--- a/historia.html
+++ b/historia.html
@@ -32,7 +32,7 @@
             <ul class="navlinks">
                 <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
-                <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
+                <li class="navlinks__list"><a class="navlinks__text active" href="historia.html">Historia</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
                 <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
             </ul>
@@ -41,7 +41,7 @@
         </header>
         <main>
             <div class="titlehistoria">
-                <p class="titlehistoria__text wow animate__animated animate__pulse">Historia</p>
+                <h1 class="titlehistoria__text wow animate__animated animate__pulse">Historia</h1>
             </div>
             <div id="historia" class="container-fluid">
                 <div class="historia__block">
