--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="logo__title wow animate__animated animate__pulse">Akatsuki</div>
             </div>
             <ul class="navlinks">
-                <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
+                <li class="navlinks__list"><a class="navlinks__text active" href="index.html">Inicio</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
