--- a/miembros.html
+++ b/miembros.html
@@ -31,7 +31,7 @@
             </div>
             <ul class="navlinks">
                 <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
-                <li class="navlinks__list"><a class="navlinks__text" href="miembros.html">Miembros</a></li>
+                <li class="navlinks__list"><a class="navlinks__text active" href="miembros.html">Miembros</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="historia.html">Historia</a></li>
                 <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
                 <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
@@ -42,7 +42,7 @@
         <main>
             <div class="backgroundmiembros">
             <div class="titlemiembros">
-                <p class="titlemiembros__text wow animate__animated animate__pulse">Miembros</p>
+                <h1 class="titlemiembros__text wow animate__animated animate__pulse">Miembros</h1>
             </div>
                 <div id="miembros">
                     <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
