--- a/unirse.html
+++ b/unirse.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <div class="titleunirse">
-            <p class="titleunirse__text wow animate__animated animate__pulse">Postulacion</p>
+            <h1 class="titleunirse__text wow animate__animated animate__pulse">Postulacion</h1>
         </div>
         <div class="backgroundunirse">
         <form id="form" class="wow animate__animated animate__fadeInUp" action="recibe.html" method="POST" enctype="multipant/form/data">
