--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <nav>
             <div class="logo">
                 <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                <div class="logo__title wow animate__animated animate__pulse">Akatsuki</div>
+                <div class="logo__title wow animate__animated animate__pulse">
+                    Akatsuki
+                </div>
             </div>
             <ul class="navlinks">
                 <li class="navlinks__list"><a class="navlinks__text active" href="index.html">Inicio</a></li>
@@ -49,7 +51,7 @@
             </div>
             <div class="containerinicio__text">
                 <h3 class="containerinicio__title  wow animate__animated animate__fadeIn animate__slower 	3s">Himno Akatsuki</h3>
-                <p class="containerinicio__p wow animate__animated animate__fadeIn animate__slower 	3s">Es el himno que los representa, los hace temibles y poderosos. Habla de lo independiente que pueden ser, de lo que son capaz  de hacer por su objetivo y que sin duda lo conseguiran</p>
+                <p class="containerinicio__p wow animate__animated animate__fadeIn animate__slower 	3s">Himno que los representa, los hace temibles y poderosos. Habla de lo independiente que pueden ser, de lo que son capaz  de hacer por su objetivo y que sin duda lo conseguiran</p>
             </div>
         </div>
         <div class="containerpelea">
