--- a/miembros.html
+++ b/miembros.html
@@ -27,7 +27,9 @@
         <nav>
             <div class="logo">
                 <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                <div class="logo__title">Akatsuki</div>
+                <div class="logo__title wow animate__animated animate__pulse">
+                    Akatsuki
+                </div>
             </div>
             <ul class="navlinks">
                 <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
