--- a/galeria.html
+++ b/galeria.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <!--META TAGS-->
     <meta charset="UTF-8">
@@ -39,55 +40,51 @@
                 <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
             </ul>
             </nav>
-            <section class="bannerGaleria"></section>
-        </header>
-        <main>
-            <div class="titlegaleria">
-                <h1 class="titlegaleria__text wow animate__animated animate__pulse">Galeria de fotos</h1>
-            </div>
-            <div class="backgroundGaleria">
-                    <ul class="containergaleria">
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu2.png" alt="zetsu2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kisame1.png" alt="kisame1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu3.png" alt="zetsu3"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori2.png" alt="sasori2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi2.png" alt="itachi2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru1.png" alt="horochimaru1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi1.png" alt="tobi1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi2.png" alt="tobi2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu2.png" alt="kakuzu2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru2.png" alt="horochimaru2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan2.png" alt="konan2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain1.png" alt="pain1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara2.png" alt="deidara2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain2.png" alt="pain2"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori1.png" alt="sasori1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan1.png" alt="konan1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu1.png" alt="zetsu1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara1.png" alt="deidara1"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain3.png" alt="pain3"></li>
-                        <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi1.png" alt="itachi1"></li>
-                    </ul>
-            </div>
-        </main>
-        <footer>
-            <div class="footercontent">
-                <ul class="footercontent__socials">
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+    </header>
+    <main>
+        <section class="bannerGaleria"></section>
+        <div class="backgroundGaleria">
+                <ul class="containergaleria">
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu2.png" alt="zetsu2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kisame1.png" alt="kisame1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu3.png" alt="zetsu3"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori2.png" alt="sasori2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi2.png" alt="itachi2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru1.png" alt="horochimaru1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi1.png" alt="tobi1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/tobi2.png" alt="tobi2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/kakuzu2.png" alt="kakuzu2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/horochimaru2.png" alt="horochimaru2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan2.png" alt="konan2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain1.png" alt="pain1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara2.png" alt="deidara2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain2.png" alt="pain2"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/sasori1.png" alt="sasori1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/konan1.png" alt="konan1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/zetsu1.png" alt="zetsu1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/deidara1.png" alt="deidara1"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/pain3.png" alt="pain3"></li>
+                    <li class="containergaleria__list"><img class="containergaleria__img  wow animate__animated animate__flipInX" src="media/galeria/itachi1.png" alt="itachi1"></li>
                 </ul>
-            </div>
-        </footer>
+        </div>
+    </main>
+    <footer>
+        <div class="footercontent">
+            <ul class="footercontent__socials">
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra-784b841a5/"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+        </div>
         <div class="footerbutton">
             <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
         </div>
-        <!--SCRIPTS-->
-        <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
-        <script src="js/wow.min.js"></script>
-        <script script>new WOW().init();</script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    </footer>
+    <!--SCRIPTS-->
+    <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
+    <script src="js/wow.min.js"></script>
+    <script script>new WOW().init();</script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
