--- a/historia.html
+++ b/historia.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <!--META TAGS-->
     <meta charset="UTF-8">
@@ -39,12 +40,9 @@
                 <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
             </ul>
         </nav>
-        <section class="bannerHistoria"></section>
     </header>
     <main>
-        <div class="titlehistoria">
-            <h1 class="titlehistoria__text wow animate__animated animate__pulse">Historia</h1>
-        </div>
+        <section class="bannerHistoria"></section>
         <div id="historia">
             <div class="historia__block1 wow animate__animated animate__flipInY">
                 <h4 class="historia__block--title">Historia de la Organizacion</h4>
@@ -88,16 +86,15 @@
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-twitter"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-facebook"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra-784b841a5/"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
+        <div class="footerbutton">
+            <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
+        </div>
     </footer>
-    <div class="footerbutton">
-        <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
-    </div>
     <!--SCRIPTS-->
     <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
