--- a/miembros.html
+++ b/miembros.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <!--META TAGS-->
     <meta charset="UTF-8">
@@ -38,95 +39,30 @@
                 <li class="navlinks__list"><a class="navlinks__text" href="galeria.html">Galeria</a></li>
                 <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
             </ul>
-            </nav>
-        </header>
+        </nav>
+    </header>
+    <main>
         <section class="bannerMiembros"></section>
-        <main>
-            <div class="titlemiembros">
-                <h1 class="titlemiembros__text wow animate__animated animate__pulse">Miembros</h1>
-            </div>
-            <div id="miembros">
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/hidan.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">hidan</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/kakuzu.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">kakuzu</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/itachi.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">itachi</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/kizame.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">kizame</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slow 	2s">
-                    <img class="miembros__img" src="media/miembros/zetsu.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">zetsu</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/tobi.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">tobi</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/deidara.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">deidara</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/sasori.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">sasori</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/konan.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">konan</div>
-                    </div>
-                </div>
-                <div class="miembros__imgbox wow animate__animated animate__fadeIn animate__slower 	3s">
-                    <img class="miembros__img" src="media/miembros/pain.png" width="100%" />
-                    <div class="miembros__overlay miembros__Blur">
-                        <div class="miembros__image-title">pain</div>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <div class="footercontent">
-                <ul class="footercontent__socials">
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                </ul>
-            </div>
-        </footer>
+
+    </main>
+    <footer>
+        <div class="footercontent">
+            <ul class="footercontent__socials">
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra-784b841a5/"><i class="fab fa-linkedin-in"></i></a></li>
+            </ul>
+        </div>
         <div class="footerbutton">
             <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
         </div>
-        <!--SCRIPTS-->
-        <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
-        <script src="js/wow.min.js"></script>
-        <script script>new WOW().init();</script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="/js/main.js"></script>
-        <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    </footer>
+    <!--SCRIPTS-->
+    <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
+    <script src="js/wow.min.js"></script>
+    <script script>new WOW().init();</script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="/js/main.js"></script>
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
