--- a/unirse.html
+++ b/unirse.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <!--META TAGS-->
     <meta charset="UTF-8">
@@ -27,9 +28,7 @@
         <nav>
             <div class="logo">
                 <img class="logo__center animate__animated animate__jello" src="media/simbolo.png" alt="logoAkatsuki">
-                <div class="logo__title wow animate__animated animate__pulse">
-                    Akatsuki
-                </div>
+                <div class="logo__title wow animate__animated animate__pulse">Akatsuki</div>
             </div>
             <ul class="navlinks">
                 <li class="navlinks__list"><a class="navlinks__text" href="index.html">Inicio</a></li>
@@ -39,12 +38,9 @@
                 <li class="navlinks__list"><a class="navlinks__text--button" href="unirse.html">Unirse</a></li>
             </ul>
         </nav>
-        <section class="bannerUnirse"></section>
     </header>
     <main>
-        <div class="titleunirse">
-            <h1 class="titleunirse__text wow animate__animated animate__pulse">Postulacion</h1>
-        </div>
+        <section class="bannerUnirse"></section>
         <div class="backgroundunirse">
         <form id="form" class="wow animate__animated animate__fadeInUp" action="recibe.html" method="POST" enctype="multipant/form/data">
             <div class="form__container">
@@ -114,16 +110,15 @@
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-twitter"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-facebook"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra-784b841a5/"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
+        <div class="footerbutton">
+            <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
+        </div>
     </footer>
-    <div class="footerbutton">
-        <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
-    </div>
     <!--SCRIPTS-->
     <script src="https://kit.fontawesome.com/3e7e932d86.js" crossorigin="anonymous"></script>
     <script src="js/wow.min.js"></script>
