--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <!--META TAGS-->
     <meta charset="UTF-8">
@@ -42,12 +43,9 @@
     </header>
     <main>
         <section class="bannerInicio"></section>
-        <div class="titleinicio">
-            <p class="titleinicio__text wow animate__animated animate__pulse">Bienvenidos</p>
-        </div>
         <div class="containerinicio">
             <div class="containerinicio__video wow animate__animated animate__backInLeft animate__faster	500ms">
-                <video width="700" controls autoplay loop muted src="../Proyecto Akatsuki/media/inicio/theme.mp4" ></video>
+                <video class="containerinicio__video-w" controls autoplay loop muted src="../Proyecto Akatsuki/media/inicio/theme.mp4" ></video>
             </div>
             <div class="containerinicio__text">
                 <h3 class="containerinicio__title  wow animate__animated animate__fadeIn animate__slower 	3s">Himno Akatsuki</h3>
@@ -76,16 +74,15 @@
     <footer>
         <div class="footercontent">
             <ul class="footercontent__socials">
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-twitter"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-facebook"></i></a></li>
-                <li class="footercontent__list"><a class="footercontent__icons" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra-784b841a5/"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
+        <div class="footerbutton">
+            <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
+        </div>
     </footer>
-    <div class="footerbutton">
-        <p class="footerbutton__text">copyright &copy;2021 Akatsuki. designed by <span class="footerbutton__text-span">Thomas Ginestra</span></p>
-    </div>
     <!--SCRIPTS-->
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
