--- a/historia.html
+++ b/historia.html
@@ -89,6 +89,7 @@
                 <li class="footercontent__list"><a class="footercontent__icons" href="https://www.instagram.com/thomasginestra/"><i class="fab fa-instagram"></i></a></li>
                 <li class="footercontent__list"><a class="footercontent__icons" href="https://twitter.com/thomas_ginestra"><i class="fab fa-twitter"></i></a></li>
                 <li class="footercontent__list"><a class="footercontent__icons" href="https://www.linkedin.com/in/thomas-ginestra-784b841a5/"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="footercontent__list"><a class="footercontent__icons" href="https://github.com/thomasginestra"><i class="fab fa-github"></i></a></li>
             </ul>
         </div>
         <div class="footerbutton">
